Update environment setup

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,6 @@ SLACK_APP_TOKEN=
 PORT=
 SLACK_CLIENT_SECRET=
 SLACK_CLIENT_ID=
+ENVIRONMENT=development|production
+HOSTNAME=localhost|www.example.com
+```
