Update env vars

--- a/.env.sample
+++ b/.env.sample
@@ -7,5 +7,4 @@ PORT=
 SLACK_CLIENT_SECRET=
 SLACK_CLIENT_ID=
 ENVIRONMENT=development|production
-HOSTNAME=localhost|www.example.com
-```
+HOSTNAME_URL=localhost|www.example.com
